// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`video Basic renders as expected 1`] = `
<div>
  <video
    autoPlay={true}
    className="block mx-auto"
    loop={true}
    muted={true}
    src="https://github.com/mapbox/android-docs/blob/publisher-production/src/video/example-bathymetry-activity.mp4?raw=true"
    title="A video!"
    type="video/mp4"
    width="100%"
  >
    <p>
      Your browser doesn't support HTML5 video. Here is a
       
      <a
        href="https://github.com/mapbox/android-docs/blob/publisher-production/src/video/example-bathymetry-activity.mp4?raw=true"
      >
        link to the video
      </a>
       instead.
    </p>
  </video>
</div>
`;

exports[`video Reduced motion renders as expected 1`] = `
<div>
  <video
    className="block mx-auto"
    controls={true}
    muted={true}
    src="https://github.com/mapbox/android-docs/blob/publisher-production/src/video/example-bathymetry-activity.mp4?raw=true"
    title="A video!"
    type="video/mp4"
    width="100%"
  >
    <p>
      Your browser doesn't support HTML5 video. Here is a
       
      <a
        href="https://github.com/mapbox/android-docs/blob/publisher-production/src/video/example-bathymetry-activity.mp4?raw=true"
      >
        link to the video
      </a>
       instead.
    </p>
  </video>
</div>
`;
